[project]
name = "lab4"
version = "0.1.0"
description = "program for labwork"
authors = [
    {name = "Yaroslav",email = "zabaraaroslav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "rsa (>=4.9,<5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.pytest.ini_options]
pythonpath = ["."]
